Implement external stop signal mechanism for Spark Streaming queries
- Removed the obsolete FileSystemStopStreamingQueryTest.
- Added a new configuration system using HOCON for stop signal backends (REST and FileSystem).
- Introduced StopSignalWatcher trait for common stop signal functionality.
- Implemented FileSystemWatcher and RestWatcher for file-based and REST-based stop signals, respectively.
- Enhanced StreamingQueryOps to support external termination via configured backends.
- Created tests for configuration loading, FileSystemWatcher, LocalFileSystemWrapper, and RestWatcher.
- Added end-to-end tests for stopping streaming queries using both backends.